# fastAPI-MySQL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
api/: db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
tests/: test_main.py
