[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
SQLAlchemy = "^1.4.29"
aiomysql = "^0.0.22"
taskipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.17.0"
aiosqlite = "^0.17.0"
httpx = "^0.21.3"
mypy = "^0.931"
black = "^22.1.0"
pyproject-flake8 = "^0.0.1-alpha.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 90

[tool.mypy]
ignore_missing_imports = true
