[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
SQLAlchemy = "^1.4.29"
aiomysql = "^0.0.22"
taskipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.17.0"
aiosqlite = "^0.17.0"
httpx = "^0.21.3"
mypy = "^0.931"
black = "^22.1.0"
pyproject-flake8 = "^0.0.1-alpha.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 119

[tool.mypy]
ignore_missing_imports = true

[tool.taskipy.tasks]
lint = { cmd = "task lint_flake8 && task lint_mypy", help = "exec lint" }
fmt = { cmd = "task fmt_black && task fmt_isort", help = "format code" }
lint_flake8 = "pflake8 api tests"
lint_mypy = "mypy api tests"
fmt_black = "black api tests"
fmt_isort = "isort api tests"
